рефакторинг scraper хэндлерова
